# conf

./: .gitignore  install.sh
ahk/: fix_win_nav.ahk  install-ahk-windows.sh
comp/: XCompose  copy-to-widnows-default.sh  gen.sh  names.compose  old.compose  user.compose  words.compose
desktop/: feh.desktop  photos.ansel.app.desktop
emacs/: spacemacs
fonts/: .uuid  downlaod-julia-mono.sh
gams/: gams  gamsmodel2tex  gdx  gdx2sqlite  gdxdiff  gdxdump
gaomon/: setup
git/: gitconfig
gpg/: j-illerhaus.gpg
host/: update
ipython/: fzf-ipython.py  ipython_config.py
jupyter/: jupyter_console_config.py
keys/: gen.sh  kmonad.kbd  kmonad.service  layout.kbd  maybe-multi-klick-one-ende  remap
keys/ahk/: remap.ahk  remap.ahk - Shortcut.lnk
kitty/: kitty.conf
nb/: nbrc
nu/: config.nu
obsidian/: backup.sh
obsidian/js/: Create a new Xournal++ Handdrawing note.md  Insert Math Macros.md  (+3 more)
passwd/: caddy-pass  guest-pass
pdf/: zathurarc
templates/: .signature-blue.xopp  cheat.md  cheat.tex  eisvogel.md  flashcards.tex  letter.md
tenpo/: Cargo.toml
tenpo/src/: main.rs  tenpo-outdated-but-with-less-dependencies.rs
tex/: .greek.tex.swo  block.tex  cheat.cls  cheat.tex.old  code.sty  emoji-fallback.sty  flashcards.tex  greek.sty  greek.tex.old  jlcode.sty  linkt-to-potentially-usefull-latex-templates.txt  listings.tex  replace-combining.sh  tikz.tex  tweet.sty  update-julia-sty.sh
tmux/: tmux.conf
utt/: utt-reporter.py
vial/: corne-work.vil
vim/: simple_vimrc  vimrc
vscode/: keybindings.json  settings.json
zsh/: install.sh  zshrc
(+43 files in other folders)
